crates/swc_ecma_parser/tests/typescript-errors/class/implements-before-extends/input.ts.stderr
error: 'extends' clause must precede 'implements' clause.
 --> $DIR/tests/typescript-errors/class/implements-before-extends/input.ts:1:22
  |
1 | class C implements A extends B {}
  |                      ^^^^^^^

